add completed data structure
